--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ApiRest_Tenis</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,7 +69,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>1.8.0</version>
+            <version>3.8.0</version>
             <configuration>
                 <release>12</release>
                 <compilerArgs>--enable-preview</compilerArgs>
@@ -76,7 +79,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>1.8.0</version>
+            <version>3.1.0</version>
             <executions>
                 <execution>
                     <phase>package</phase>
