--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
                 <compilerArgs>--enable-preview</compilerArgs>
             </configuration>
         </plugin>
+	    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+	    
         <!-- This is just to make sure the class is set as main class to execute from the jar-->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
