--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ApiRest_Tenis</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>11</java.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -21,11 +24,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>org.hibernate.javax.persistence</groupId>
-		    <artifactId>hibernate-jpa-2.1-api</artifactId>
-		    <version>1.0.0.Final</version>
 		</dependency>
 
 		<dependency>
@@ -66,21 +64,12 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.6.2</version>
+            <version>3.8.0</version>
             <configuration>
                 <release>12</release>
                 <compilerArgs>--enable-preview</compilerArgs>
             </configuration>
         </plugin>
-	    <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
-	    
         <!-- This is just to make sure the class is set as main class to execute from the jar-->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
